SubBt/force-app/main/default/objects/File_Access_Control__c/File_Access_Control__c.object-meta.xml
<CustomObject>
    <description>Access Control List for files on Amazon server. You can grant &quot;View&quot; and/or &quot;Download&quot; access for any files.</description>
    <label>File Access Control</label>
    <nameField>
        <displayFormat>ACL-{0000000000}</displayFormat>
        <label>Access Control Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Access Controls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>