SubBt/force-app/main/default/objects/File_Access_Control__c/fields/Grantee__c.field-meta.xml
<CustomField>
    <fullName>Grantee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User whom access is granted.</description>
    <inlineHelpText>User whom access is granted.</inlineHelpText>
    <label>Grantee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Access_Control</relationshipName>
    <type>Lookup</type>
</CustomField>