SubBt/force-app/main/default/objects/File_Access_Control__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User can only &quot;View&quot; the file on Amazon Server.</description>
    <inlineHelpText>If true, Grantee can only &quot;View&quot; the file.</inlineHelpText>
    <label>View</label>
    <type>Checkbox</type>
</CustomField>